# cython_scratch

./: .gitignore  README.md  cmath_rem_modulo.py  pyproject.toml  setup.py  speedtest_isfinite.py  speedtest_isfinite_plot.py  speedtests.py  speedtests_plot.py
cython_scratch/: multi_dim.py  np_exps.pyx
cython_scratch/tests/: test_finite_checks.py  test_modulo_ops.py  test_np_operations.py
