[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "cython_scratch"
version = "0.1.0"
authors = [
  { name="Chris"},
]
description="for messing around with cython "
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: BSD License",
]
dependencies=['numpy', 'matplotlib','pytest','pandas']

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
"Homepage" = "https://github.com/chris_havlin/cython_scratch"
"Bug Tracker" = "https://github.com/chris_havlin/cython_scratch/issues"

[project.license]
text = "GNU GPL"
